k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: backend-deployment
  namespace: chat-app

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata: 
      name: backend-app
      namespace: chat-app
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: sachin2223/chatapp-backend:latest
        ports:
        - containerPort: 5001
