k8s/mongodb-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: mongodb-deployment
  namespace: chat-app

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata: 
      name: mongodb
      namespace: chat-app
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo:latest
        ports:
        - containerPort: 27017
      volumes: 
      - name: mongo-data
        persistentVolumeClaim: 
          claimName: mongodb-pvc
